feat(auth): add sign and parse jwt token methods
