# api/openapi/openapi.yaml
@@ -15,8 +15,31 @@ tags:
   - name: Font
     description: Operations with fonts
 security:
-  - BearerAuth: []    
+  - BearerAuth: [ ]
 paths:
+  /api/v1/auth/login:
+    post:
+      summary: Authenticate user
+      description: Authenticate user and get tokens
+      operationId: authLogin
+      tags:
+        - Auth
+      security: [ ]
+      responses:
+        '200':
+          description: Login successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthTokens'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '429':
+          $ref: '#/components/responses/TooManyRequests'
+        '500':
+          $ref: '#/components/responses/InternalError'
   /api/v1/images:
     get:
       summary: Get list of user images
@@ -77,7 +100,7 @@ paths:
         '429':
           $ref: '#/components/responses/TooManyRequests'
         '500':
-          $ref: '#/components/responses/InternalError'  
+          $ref: '#/components/responses/InternalError'
   /api/v1/images/{name}:
     delete:
       summary: Delete image by name
@@ -93,7 +116,7 @@ paths:
         '401':
           $ref: '#/components/responses/Unauthorized'
         '429':
-          $ref: '#/components/responses/TooManyRequests'  
+          $ref: '#/components/responses/TooManyRequests'
         '500':
           $ref: '#/components/responses/InternalError'
     parameters:
@@ -118,7 +141,7 @@ paths:
         '401':
           $ref: '#/components/responses/Unauthorized'
         '429':
-          $ref: '#/components/responses/TooManyRequests'  
+          $ref: '#/components/responses/TooManyRequests'
         '500':
           $ref: '#/components/responses/InternalError'
 components:
@@ -167,6 +190,20 @@ components:
           x-order: 1
         has_next:
           type: boolean
+          x-order: 2
+
+    AuthTokens:
+      type: object
+      description: Pair of auth tokens
+      required:
+        - access_token
+        - refresh_token
+      properties:
+        access_token:
+          type: string
+          x-order: 1
+        refresh_token:
+          type: string
           x-order: 2
 
     Image:
