# internal/model/session.go
@@ -1,0 +1,6 @@
+package model
+
+type Session struct {
+	UserID       int64
+	RefreshToken string
+}
